# no_gree_ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .vercelignore  DEPLOY.md  Makefile  README.md  docker-compose.yml  railway.json  uiux.txt
apps/api/: alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_user_role.py  0003_drop_redundant_scan_index.py
apps/api/app/: main.py
apps/api/app/application/: errors.py  ports.py
apps/api/app/core/: config.py  database.py  logging_config.py  rate_limit.py  security.py
apps/api/app/domain/: entities.py
apps/api/app/interface/: dependencies.py  error_handlers.py  schemas.py
apps/api/tests/: fakes.py  test_use_cases.py
ml/: README.md  pyproject.toml  requirements.txt  smoke_test.py  smoke_test_engine.py
ml/data/reports/: dataset_report.json
ml/models/message_fraud/: calibrator.joblib  feature_names.json  metadata.json  model.joblib
ml/models/scam_detection/: metadata.json  model.joblib
ml/models/transaction_fraud/: comparison.json  feature_names.json  metadata.json  model.joblib
ml/snaija_ml/: __init__.py
ml/snaija_ml/common/: features.py  text.py
ml/snaija_ml/data/: __init__.py  download.py  legit_alerts.py  nigeria_generator.py  preprocess.py  rebuild_ieee_raw.py  training_data.py
ml/snaija_ml/pipelines/: dataset.py  train_message_fraud.py  train_scam_detection.py  train_scam_transformer.py  train_transaction_fraud.py
ml/snaija_ml/serving/: predictor.py  scam_predictor.py  scam_transformer.py  transaction_predictor.py
(+106 files in other folders)
