[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securenaija-ml"
version = "0.1.0"
description = "SecureNaija fraud-intelligence ML: datasets, training pipelines, and serving."
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "joblib>=1.3",
    "scipy>=1.11",
    "pyarrow>=15",   # read the IEEE-CIS parquet during Model 2 training
]

[project.optional-dependencies]
# SHAP is optional: serving falls back to XGBoost's native TreeSHAP (pred_contribs)
# when the shap package is unavailable, so explanations always work.
explain = ["shap>=0.44"]

[tool.setuptools.packages.find]
include = ["snaija_ml*"]
