[project]
name = "securenaija-api"
version = "0.1.0"
description = "SecureNaija FastAPI backend (Clean Architecture)."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
